added other routes
